Optimize imports and remove PostGreSQLAccessObject.java